// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:MoreOrLess matches + Show NN more 1`] = `
<div>
  <ul>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="alpha"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-alpha"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-alpha"
      >
        alpha
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="beta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-beta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-beta"
      >
        beta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="gamma"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-gamma"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-gamma"
      >
        gamma
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="delta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-delta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-delta"
      >
        delta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="epsilon"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-epsilon"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-epsilon"
      >
        epsilon
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
  </ul>
  <div>
    <button
      className="a-btn a-btn__link more"
      onClick={[Function]}
    >
      + Show 3 more
    </button>
  </div>
</div>
`;

exports[`component:MoreOrLess matches - Show NN less 1`] = `
<div>
  <ul>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="alpha"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-alpha"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-alpha"
      >
        alpha
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="beta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-beta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-beta"
      >
        beta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="gamma"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-gamma"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-gamma"
      >
        gamma
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="delta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-delta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-delta"
      >
        delta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="epsilon"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-epsilon"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-epsilon"
      >
        epsilon
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="zeta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-zeta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-zeta"
      >
        zeta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="eta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-eta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-eta"
      >
        eta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="theta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfield-theta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfield-theta"
      >
        theta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        99
      </span>
    </li>
  </ul>
  <div>
    <button
      className="a-btn a-btn__link more"
      onClick={[Function]}
    >
      - Show 3 less
    </button>
  </div>
</div>
`;
